--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "lite-server": "^2.3.0"
   },
   "dependencies": {
-    "zeppelin-solidity": "^1.5.0"
+    "ethereumjs-wallet": "^0.6.0",
+    "truffle-wallet-provider": "0.0.5",
+    "web3": "^1.0.0-beta.30",
+    "zeppelin-solidity": "^1.7.0"
   }
 }
